Build on OS X too
Since this is increasing our build time, don't both testing on beta.

Related: #38

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 language: rust
 rust:
   - stable
-  - beta
   - nightly
+os:
+  - linux
+  - osx
 
 script:
   # Configure Emacs for building
   - ./autogen.sh
   # TODO: set up makeinfo on travis.
-  - ./configure --without-makeinfo --with-xpm=no --with-gif=no
+  - ./configure --without-makeinfo --with-xpm=no --with-gif=no --with-gnutls=no
   - make -j 3
 
   - make check || echo 'make check failed'
@@ -20,3 +22,4 @@ notifications:
 matrix:
   allow_failures:
     - rust: nightly
+    - os: osx
